correction sticky header + début page services

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -50,7 +50,7 @@ import "@/styles/components/buttons.css";
   />
 
   <body>
-    <header>
+    <header class="site-header">
       <div class="container nav">
         <a class="brand" href="/">
           <img
